--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wQX-Vl-NzI">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -43,7 +43,7 @@
             </objects>
             <point key="canvasLocation" x="369.56521739130437" y="128.57142857142856"/>
         </scene>
-        <!--Main View Controller-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="MainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" interfaceStyle="light" id="BYZ-38-t0r" customClass="MainViewController" customModule="MysteryBox" customModuleProvider="target" sceneMemberID="viewController">
@@ -51,26 +51,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3n-Pl-jc9">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="73"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ww7-od-4H5">
-                                        <rect key="frame" x="329" y="38" width="63" height="30"/>
-                                        <state key="normal" title="Add New"/>
-                                        <connections>
-                                            <action selector="addAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2PU-MT-5gX"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="0.59913960966289304" green="0.69599008383052408" blue="0.72330828384300516" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="y3n-Pl-jc9" secondAttribute="height" multiplier="414:53" constant="-156.22641509433959" id="Q66-ck-3Ic"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ww7-od-4H5" secondAttribute="trailing" constant="22" id="i0t-Ey-Cmc"/>
-                                    <constraint firstItem="Ww7-od-4H5" firstAttribute="top" secondItem="y3n-Pl-jc9" secondAttribute="top" constant="38" id="vl3-bW-6Ek"/>
-                                </constraints>
-                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="a8l-TV-Rol">
-                                <rect key="frame" x="10" y="83" width="394" height="813"/>
+                                <rect key="frame" x="0.0" y="103" width="414" height="793"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ieq-Id-LKS">
                                     <size key="itemSize" width="111" height="111"/>
@@ -108,23 +90,81 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="a8l-TV-Rol" firstAttribute="top" secondItem="y3n-Pl-jc9" secondAttribute="bottom" constant="10" id="9bI-pE-CPS"/>
-                            <constraint firstItem="y3n-Pl-jc9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9vc-Gp-N0G"/>
-                            <constraint firstItem="a8l-TV-Rol" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="AMv-in-qKe"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y3n-Pl-jc9" secondAttribute="trailing" id="JZK-Bh-RyT"/>
-                            <constraint firstItem="y3n-Pl-jc9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Z00-6y-LQg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a8l-TV-Rol" secondAttribute="trailing" constant="10" id="ZS8-1a-B21"/>
+                            <constraint firstItem="a8l-TV-Rol" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AMv-in-qKe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a8l-TV-Rol" secondAttribute="trailing" id="ZS8-1a-B21"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="a8l-TV-Rol" secondAttribute="top" constant="-15" id="d6W-XW-z4A"/>
                             <constraint firstAttribute="bottom" secondItem="a8l-TV-Rol" secondAttribute="bottom" id="f7f-gs-hnJ"/>
+                            <constraint firstItem="a8l-TV-Rol" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="34" id="xKi-di-IWA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Home" id="TT2-23-aEx">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="r73-tI-HUk">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kci-jY-VJr">
+                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add New"/>
+                                <connections>
+                                    <action selector="addAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tb7-Pa-hZH"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="a8l-TV-Rol" id="Xa6-cj-ioN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1397.1014492753625" y="127.90178571428571"/>
+            <point key="canvasLocation" x="3604.347826086957" y="128.57142857142856"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="9V7-Jv-qtc">
+            <objects>
+                <viewController storyboardIdentifier="PhotoDetailedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eZt-Ul-Az6" customClass="PhotoDetailedViewController" customModule="MysteryBox" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2D4-ke-Kfu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kVE-Vn-U9Z">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="kVE-Vn-U9Z" secondAttribute="bottom" id="FME-g1-yd7"/>
+                            <constraint firstItem="iq6-Xn-SvG" firstAttribute="trailing" secondItem="kVE-Vn-U9Z" secondAttribute="trailing" id="TFy-WK-MTW"/>
+                            <constraint firstItem="kVE-Vn-U9Z" firstAttribute="leading" secondItem="iq6-Xn-SvG" secondAttribute="leading" id="icB-Lj-TjL"/>
+                            <constraint firstItem="kVE-Vn-U9Z" firstAttribute="top" secondItem="iq6-Xn-SvG" secondAttribute="top" id="ssd-Zw-Ems"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="iq6-Xn-SvG"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="266-MF-Md5"/>
+                    <connections>
+                        <outlet property="imagedDetailed" destination="kVE-Vn-U9Z" id="VFg-Mn-lEt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="paT-3m-2g2" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4743" y="129"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hI2-8g-LoA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wQX-Vl-NzI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fFh-Qh-44J">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LsK-3m-6Y5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wdb-Rm-Fiv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2694.202898550725" y="128.57142857142856"/>
         </scene>
     </scenes>
     <resources>
